[package]
name = "wasm-blackjack"
version = "0.1.0"
authors = ["Mischa MacLeod <mischa.macleod@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
once_cell = "1.4.0"

[dependencies.getrandom]
version = "0.1.14"
features = ["wasm-bindgen"]

[dependencies.rand]
version = "0.7.3"
default-features = false
features = ["alloc", "getrandom"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
